# efi20

./: CMakeLists.txt
cmake/: compile-options.cmake
src/impl/: CMakeLists.txt
src/include/x86_64/: macros.hpp
src/modules/: module.ixx
src/modules/console/: constants.ixx  module.ixx  output-protocol.ixx
src/modules/runtime/: module.ixx
src/modules/time/: module.ixx
src/modules/types/: constants.ixx  error.ixx  module.ixx  network.ixx  system.ixx  time.ixx
src/modules/types/x86_64/: primitives.ixx
